--- a/_posts/2021-04-12-Utrpeni.md
+++ b/_posts/2021-04-12-Utrpeni.md
@@ -3,56 +3,56 @@ layout: post
 title: Utrpení
 ---
 
-Dneska jsem měl dvě přednášky z lineární algebry a to mě přirozeně přivedlo k tématu utrpení.
+Dneska jsem měl dvě přednášky z lineární algebry a to mě přirozeně přivedlo k tématu *utrpení*.
 
 ### Souvislost utrpení a úspěchu
 Tak nějak jsem zpozoroval, že je přímé spojení mezi jakýmsi "úspěchem" a schopnosti snést utrpení.
 
 Aby člověk dosáhnul jakéhokoliv dlouhodobějšího cíle musí umět přemluvit svůj opičí mozek, aby snesl určitou dávku krátkodobého utrpení nebo bolesti, aby z dlouhodobého hlediska dosáhnul nějakého cíle.
 
-Takže vlastně jediná schopnost, která dělí "úspěšné" lidi/firmy od těch neúspěšných je tahle jedna vlastnost. To je mimochodem to, co také dělí vás od ostatních šimpanzů a opičáků. Vy, na rozdíl od nich, máte možnost si říct "Hm. Možná nesežru tu 20. sušenku a místo toho půjdu běhat kolem domu, abych nebyl po koroně nevypadal/a jako plejtvák obrovský". Samozřejmě ale závisí na tom, jak trénovanou máte tu *sílu vůle*. A protože nejste disciplovaný mnich, stejně těch sušenek sníte ještě dalších 10.
+Vpodstatě jediné, co dělí "úspěšné" lidi od těch neúspěšných, je právě tato schopnost - snést utrpení. To je mimochodem to, co také dělí vás od ostatních šimpanzů a opičáků. Vy, na rozdíl od nich, máte možnost si říct "Hm. Možná nesežru tu 20. sušenku a místo toho půjdu běhat kolem domu, abych po koroně nevypadal/a jako plejtvák obrovský". Samozřejmě ale závisí na tom, jak trénovanou máte tu *sílu vůle*. A protože nejste disciplovaný mnich, stejně těch sušenek sníte ještě dalších 10.
 
-### Síla vůle == schopnost se přemluvit k utrpení
-Síla vůle je vlastně jakýsi dar od nevímkoho, který nám umožňuje bojovat s naším opičím mozkem a přesvědčit ho, aby dělal něco nepříjemného. Dlouhodobé myšlení nás odděluje od ostatních primátů. Ovšem dlouhodobě myslet dokáže každý. Důležité je, jestli člověk dokáže na základě toho myšlení jednat.
+### Síla vůle == schopnost přemluvit se k utrpení
+Síla vůle je vlastně jakýsi "dar" od nevímkoho, který nám umožňuje bojovat s naším opičím mozkem a přesvědčit ho, aby dělal něco nepříjemného. Dlouhodobé myšlení nás odděluje od ostatních primátů. Ovšem dlouhodobě myslet dokáže každý. To podstatné je, jestli člověk dokáže na základě toho myšlení jednat.
 
 ### Utrpení == štěstí
 Kdyby se člověk nechal ovládnout svými pudy a opičím mozkem, nešel by na vejšku, koukal by na seriály, nesportoval by, neměl by kvalitní vztahy se svými fellow opičáky a neměl by žádnou budoucnost. Jen by v životě vyhledával krátkodobé uspokojení.
 
-Na druhou stranu, když by člověk byl ochotný obětovat část svého času tomu, aby dosáhnul nějakého cíle, aby měl zdravou postavu, aby se něco naučil, tak by se mu zvýšila kvalita života a mohl by být šťastnější.
+Na druhou stranu, když by člověk byl ochotný obětovat část svého času tomu, aby dosáhnul nějakého cíle, aby měl zdravou postavu, aby se něco naučil, tak by se mu zvýšila kvalita života a mohl by být z *dlouhodobého hlediska* šťastnější.
 
 V určitém smyslu, čím více utrpení člověk snese, tím šťastnější může potenciálně být. Nejste šťastný? Tak zvedněte zadek a jděte s tím něco dělat :D easy peasy
 
 ### Ironie cílů a očekávání společnosti
-Je to trochu úsměvný, když se podíváte kolem sebe. Všichni by rádi dosáhli lepší postavy, platu, vzdělání, vztahů, života apod. Nikdo ale nechce snést to utrpení. Kupodivu nikdo si ani nechce přiznat, že bude muset nějaké utrpení snést. Všichni si tak nějak naivně myslí, že žádné utrpení nebude. 
+Je to trochu úsměvný, když se podíváte kolem sebe. Všichni by rádi dosáhli lepší postavy, platu, vzdělání, vztahů, života apod. Nikdo ale nechce snést to utrpení. Kupodivu nikdo si ani nechce přiznat, že bude muset nějaké utrpení snést. Všichni si tak nějak naivně myslí, že žádné utrpení nebude.
 
-To je jako byste šli obsadit Pražský hrad a nečekali (třeba abyste tam pověsili trenky nebo nevím co), že vám v tom actually někdo bude chtít zabránit. To je ovšem naivní stejně jako mé algoritmy na progtestu.
+To je jako byste šli obsadit Pražský hrad (třeba abyste tam pověsili červené trenky nebo nevím co) a nečekali, že vám v tom actually někdo bude chtít zabránit. To je ovšem naivní stejně jako mé algoritmy na progtestu.
 
 Proto vidíte tolik lidí kolem sebe, jak vesele říkají, že zhubnou, že půjdou na vejšku, že přestanou závislačit atd. a pak všichni do pár týdnů failnou.
 
+Nechápejte mě špatně, já nejsem žádná výjimka, píšu to především z vlastní zkušenosti :D
+
 ### Je síla vůle nevyčerpatelná?
-No.. To by mě taky zajímalo.. Na jednu stranu je pravda, že lidské tělo toho snese opravdu hodně. Na druhou stranu, z vlastní zkušenosti, když se člověk po celém dnu programování semestrálky cítí jako by ho přejel kombajn, tak fakt nemá náladu jít v 10 večer ještě cvičit.
+No.. To by mě taky zajímalo.. Na jednu stranu je pravda, že lidské tělo toho snese opravdu hodně. Na druhou stranu, z vlastní zkušenosti, když se člověk po celém dni programování semestrálky cítí jako by ho přejel kombajn, tak fakt nemá náladu jít v 10 večer ještě cvičit.
 
 Na druhou stranu, myslím, že jsou lidi schopný snést fakt 2x víc, než si myslí. Důkazem toho je, že když si na vejšce člověk myslí, že už mu víc práce nemůžou dát, tak mu stejně naloží 2x víc a stejně to nějak musí zvládnout :D
 
 ### Jak se dá utrpení vydržet dlouhodobě? 
-Tak nějak jsem zpozoroval, že na to snesení utrpení pomáhá tohle:
-- Je dobré mít správná a přesná očekávání. Čím blíže se vaše očekávání blíží realitě, tím lehčí bude pak tu bolest (mentální/fyzickou) vydržet.
-- Důležité je *přijmout* to utrpení. Člověk se tomu nevyhne, proto je nejlepší se s tím smířit :)
-- Každý den je fajn se nejdříve vrhnout na věci, které fakt nechcete dělat (aka ty co vyžadují nejvíce utrpení). Tak se dá zvládnout docela hodně práce
-- Taky pomáhá, když si člověk to utrpení zautomatizuje. Když z toho člověk vytvoří návyk, tak se s tím váš mozek lépe smíří.
+Hm. Když se nad tím tak zamyslím, tak asi nejvíc pomáhá, když má člověk *správná a přesná očekávání*. Čím více se blíží realitě, tím lehčí je pak tu bolest (mentální/fyzickou) snést.
+
+Další fajn věc je, když člověk dokáže *přijmout* to utrpení. Stejně se tomu člověk nevyhne a když to prostě přijme a přestane se tomu bránit, tak si to tím udělá lehčí..
 
 ### Co motivace?
 Existují vpodstatě dva způsoby, které jsem viděl, že ostatní používají, aby přinutili svoji mysl něco dělat:
 
 1) Emoce a motivace
-Je to prosté. Každý den si připomínáte, proč vůbec děláte to, co děláte. Např. že se snažíte už dvě hodiny vypočítat 4. Taylorův polynom, abyste mohli dělat hranolky v mekáči.
+Je to prosté. Každý den si připomínáte, proč vůbec děláte to, co děláte a k jakému cíli to vede... Např. že se snažíte už dvě hodiny vypočítat 4. Taylorův polynom, abyste pak stejně mohli po škole dělat hranolky v mekáči.
 
 2) Bruteforce
 Bruteforce je takový přístup, že se částečně vykašlete na emoce a prostě to uděláte. Prostě budete 5 let hlavou mlátit do zdi dokud ji neproboříte (podobnost se studiem vysoké školy je čistě náhodná. Mimochodem, proto je dobrý si být jistý, že mlátíte do správné zdi :D). 
 
 Oba způsoby fungují. Otázkou je, jak moc chcete na kterém záviset. Určitě člověk ale potřebuje oba dva. Ať si kdo říká co chce, emocím se nikdo nevyhne, takže dříve nebo později se budete muset spolehnout na první způsob motivace :) Na druhou stranu, furt snít o budoucnosti a být závislý na emocích je právě to, kde člověka často přemůže jeho opičí mozeček a proto skončí na gauči se sušenkama v ruce.
 
-Člověk nesmí být závislý na emocích a motivaci. Nejlepší je, dle mého skromného názoru, nečekat na nějaký závan inspirace/motivace, ale prostě vše v životě bruteforcenout a případně se k tomu i klidně motivovat emočně, ale nikdy na těch emocích nezáviset. Kdybych dělal do školy jen kdyby se mi chtělo, tak bych furt byl v první třídě základky (a vy nejspíš taky :D)
+Člověk nesmí být závislý na emocích a motivaci. Nejlepší je, dle mého skromného názoru, nečekat na nějaký závan inspirace/motivace, ale prostě vše v životě bruteforcenout a případně se k tomu i klidně motivovat emočně, ale nikdy nezáviset na emocích jako na hlavním zdroji motivace. Kdybych dělal věci do školy jen když se mi chtělo, tak bych furt byl v první třídě základky (a vy nejspíš taky :D)
 
 ### Užijte si utrpení
 Tak jako tak, pokud actually chcete v životě dělat něco zajímavýho, budete trpět. Proč se tomu teda násilně bránit a jít proti tomu, když to je nevyhnutelné? Proč to prostě nepřijmout jako součást života a začít si užívat to, že vůbec máte možnost něco dělat? :)
