--- a/_posts/2021-05-15-Cukrarna.md
+++ b/_posts/2021-05-15-Cukrarna.md
@@ -1,3 +1,8 @@
+---
+layout: post
+title: Cukrárna
+---
+
 Klečel u svého kocoura a hladil ho. Svítilo Slunce a mužík s kocourem pozorovali kolemjedoucí auta. Po chodníku se rozlévala atmosféra teplého odpoledne. Kocourova srst zlatavě zářila. Oba klidní. Kocour spokojeně předl, jak ho mužík drbal za ouškama.
 
 "Tak co? Půjdem?" usmál se mužík nuceným úsměvem na kocoura.
@@ -30,7 +35,7 @@ Cink.
 
 ---
 
-"Nedívej se tak na mě Moore. Vždyť máš taky své dny." řekl mužík a zadíval se na místo, kde předtím stála neznámá osoba. 
+"Nedívej se tak na mě Moore. Vždyť máš taky své dny." řekl mužík a zadíval se na místo, kde předtím stála neznámá osoba.
 
 Slunce se už začalo dotýkat obzoru. Pofukoval lehký vánek.
 
