--- a/_posts/2021-04-12-Utrpeni.md
+++ b/_posts/2021-04-12-Utrpeni.md
@@ -1,28 +1,32 @@
 ---
 layout: post
-title: Utrpení
+title: Utrpení, cíle a motivace
 ---
 
-Dneska jsem měl dvě přednášky z lineární algebry a to mě přirozeně přivedlo k tématu *utrpení*.
+Dneska jsem měl dvě přednášky z lineární algebry a to mě přirozeně přivedlo k tématu _utrpení_.
 
 ### Souvislost utrpení a úspěchu
+
 Tak nějak jsem zpozoroval, že je přímé spojení mezi jakýmsi "úspěchem" a schopnosti snést utrpení.
 
 Aby člověk dosáhnul jakéhokoliv dlouhodobějšího cíle musí umět přemluvit svůj opičí mozek, aby snesl určitou dávku krátkodobého utrpení nebo bolesti, aby z dlouhodobého hlediska dosáhnul nějakého cíle.
 
-Vpodstatě jediné, co dělí "úspěšné" lidi od těch neúspěšných, je právě tato schopnost - snést utrpení. To je mimochodem to, co také dělí vás od ostatních šimpanzů a opičáků. Vy, na rozdíl od nich, máte možnost si říct "Hm. Možná nesežru tu 20. sušenku a místo toho půjdu běhat kolem domu, abych po koroně nevypadal/a jako plejtvák obrovský". Samozřejmě ale závisí na tom, jak trénovanou máte tu *sílu vůle*. A protože nejste disciplovaný mnich, stejně těch sušenek sníte ještě dalších 10.
+Vpodstatě jediné, co dělí "úspěšné" lidi od těch neúspěšných, je právě tato schopnost - snést utrpení. To je mimochodem to, co také dělí vás od ostatních šimpanzů a opičáků. Vy, na rozdíl od nich, máte možnost si říct "Hm. Možná nesežru tu 20. sušenku a místo toho půjdu běhat kolem domu, abych po koroně nevypadal/a jako plejtvák obrovský". Samozřejmě ale závisí na tom, jak trénovanou máte tu _sílu vůle_. A protože nejste disciplovaný mnich, stejně těch sušenek sníte ještě dalších 10.
 
 ### Síla vůle == schopnost přemluvit se k utrpení
+
 Síla vůle je vlastně jakýsi "dar" od nevímkoho, který nám umožňuje bojovat s naším opičím mozkem a přesvědčit ho, aby dělal něco nepříjemného. Dlouhodobé myšlení nás odděluje od ostatních primátů. Ovšem dlouhodobě myslet dokáže každý. To podstatné je, jestli člověk dokáže na základě toho myšlení jednat.
 
 ### Utrpení == štěstí
+
 Kdyby se člověk nechal ovládnout svými pudy a opičím mozkem, nešel by na vejšku, koukal by na seriály, nesportoval by, neměl by kvalitní vztahy se svými fellow opičáky a neměl by žádnou budoucnost. Jen by v životě vyhledával krátkodobé uspokojení.
 
-Na druhou stranu, když by člověk byl ochotný obětovat část svého času tomu, aby dosáhnul nějakého cíle, aby měl zdravou postavu, aby se něco naučil, tak by se mu zvýšila kvalita života a mohl by být z *dlouhodobého hlediska* šťastnější.
+Na druhou stranu, když by člověk byl ochotný obětovat část svého času tomu, aby dosáhnul nějakého cíle, aby měl zdravou postavu, aby se něco naučil, tak by se mu zvýšila kvalita života a mohl by být z _dlouhodobého hlediska_ šťastnější.
 
 V určitém smyslu, čím více utrpení člověk snese, tím šťastnější může potenciálně být. Nejste šťastný? Tak zvedněte zadek a jděte s tím něco dělat :D easy peasy
 
 ### Ironie cílů a očekávání společnosti
+
 Je to trochu úsměvný, když se podíváte kolem sebe. Všichni by rádi dosáhli lepší postavy, platu, vzdělání, vztahů, života apod. Nikdo ale nechce snést to utrpení. Kupodivu nikdo si ani nechce přiznat, že bude muset nějaké utrpení snést. Všichni si tak nějak naivně myslí, že žádné utrpení nebude.
 
 To je jako byste šli obsadit Pražský hrad (třeba abyste tam pověsili červené trenky nebo nevím co) a nečekali, že vám v tom actually někdo bude chtít zabránit. To je ovšem naivní stejně jako mé algoritmy na progtestu.
@@ -32,29 +36,35 @@ Proto vidíte tolik lidí kolem sebe, jak vesele říkají, že zhubnou, že pů
 Nechápejte mě špatně, já nejsem žádná výjimka, píšu to především z vlastní zkušenosti :D
 
 ### Je síla vůle nevyčerpatelná?
+
 No.. To by mě taky zajímalo.. Na jednu stranu je pravda, že lidské tělo toho snese opravdu hodně. Na druhou stranu, z vlastní zkušenosti, když se člověk po celém dni programování semestrálky cítí jako by ho přejel kombajn, tak fakt nemá náladu jít v 10 večer ještě cvičit.
 
 Na druhou stranu, myslím, že jsou lidi schopný snést fakt 2x víc, než si myslí. Důkazem toho je, že když si na vejšce člověk myslí, že už mu víc práce nemůžou dát, tak mu stejně naloží 2x víc a stejně to nějak musí zvládnout :D
 
-### Jak se dá utrpení vydržet dlouhodobě? 
-Hm. Když se nad tím tak zamyslím, tak asi nejvíc pomáhá, když má člověk *správná a přesná očekávání*. Čím více se blíží realitě, tím lehčí je pak tu bolest (mentální/fyzickou) snést.
+### Jak se dá utrpení vydržet dlouhodobě?
 
-Další fajn věc je, když člověk dokáže *přijmout* to utrpení. Stejně se tomu člověk nevyhne a když to prostě přijme a přestane se tomu bránit, tak si to tím udělá lehčí..
+Hm. Když se nad tím tak zamyslím, tak asi nejvíc pomáhá, když má člověk _správná a přesná očekávání_. Čím více se blíží realitě, tím lehčí je pak tu bolest (mentální/fyzickou) snést.
+
+Další fajn věc je, když člověk dokáže _přijmout_ to utrpení. Stejně se tomu člověk nevyhne a když to prostě přijme a přestane se tomu bránit, tak si to tím udělá lehčí..
 
 ### Co motivace?
+
 Existují vpodstatě dva způsoby, které jsem viděl, že ostatní používají, aby přinutili svoji mysl něco dělat:
 
-1) Emoce a motivace
-Je to prosté. Každý den si připomínáte, proč vůbec děláte to, co děláte a k jakému cíli to vede... Např. že se snažíte už dvě hodiny vypočítat 4. Taylorův polynom, abyste pak stejně mohli po škole dělat hranolky v mekáči.
+1. Emoce a motivace
 
-2) Bruteforce
-Bruteforce je takový přístup, že se částečně vykašlete na emoce a prostě to uděláte. Prostě budete 5 let hlavou mlátit do zdi dokud ji neproboříte (podobnost se studiem vysoké školy je čistě náhodná. Mimochodem, proto je dobrý si být jistý, že mlátíte do správné zdi :D). 
+   Je to prosté. Každý den si připomínáte, proč vůbec děláte to, co děláte a k jakému cíli to vede... Např. že se snažíte už dvě hodiny vypočítat 4. Taylorův polynom, abyste pak stejně mohli po škole dělat hranolky v mekáči.
+
+2. Bruteforce
+
+   Bruteforce je takový přístup, že se částečně vykašlete na emoce a prostě to uděláte. Prostě budete 5 let hlavou mlátit do zdi dokud ji neproboříte (podobnost se studiem vysoké školy je čistě náhodná. Mimochodem, proto je dobrý si být jistý, že mlátíte do správné zdi :D).
 
 Oba způsoby fungují. Otázkou je, jak moc chcete na kterém záviset. Určitě člověk ale potřebuje oba dva. Ať si kdo říká co chce, emocím se nikdo nevyhne, takže dříve nebo později se budete muset spolehnout na první způsob motivace :) Na druhou stranu, furt snít o budoucnosti a být závislý na emocích je právě to, kde člověka často přemůže jeho opičí mozeček a proto skončí na gauči se sušenkama v ruce.
 
 Člověk nesmí být závislý na emocích a motivaci. Nejlepší je, dle mého skromného názoru, nečekat na nějaký závan inspirace/motivace, ale prostě vše v životě bruteforcenout a případně se k tomu i klidně motivovat emočně, ale nikdy nezáviset na emocích jako na hlavním zdroji motivace. Kdybych dělal věci do školy jen když se mi chtělo, tak bych furt byl v první třídě základky (a vy nejspíš taky :D)
 
 ### Užijte si utrpení
+
 Tak jako tak, pokud actually chcete v životě dělat něco zajímavýho, budete trpět. Proč se tomu teda násilně bránit a jít proti tomu, když to je nevyhnutelné? Proč to prostě nepřijmout jako součást života a začít si užívat to, že vůbec máte možnost něco dělat? :)
 
 No nic. Já si dnešní přednášku lingebry užil. Jdu dojíst ty sušenky. Zatím :D
